<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/logoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35sp"
        android:text="@string/app_logo"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/loginEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45sp"
        android:background="@drawable/rect_text_edit"
        android:ems="18"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="5sp"
        android:textColor="@color/black"
        android:textSize="15sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginEmailEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:background="@drawable/rect_text_edit"
        android:ems="18"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="5sp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="120sp"
        android:layout_height="35sp"
        android:layout_alignLeft="@+id/loginPasswordEditText"
        android:layout_below="@+id/loginPasswordEditText"
        android:layout_marginTop="9sp"
        android:background="@drawable/custom_signin_button"
        android:text="@string/signin_text"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="120sp"
        android:layout_height="35sp"
        android:layout_alignRight="@+id/loginPasswordEditText"
        android:layout_below="@+id/loginPasswordEditText"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="9sp"
        android:text="@string/fbconnect_text"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:text="@string/register_text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/forgetPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/forget_password_text"
        android:textColor="@color/black" />

</RelativeLayout>