<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp" >

    <Button
        android:id="@+id/fp_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/custom_signin_button"
        android:minHeight="35dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/forget_password_reover"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />
        
    <EditText
        android:id="@+id/fp_username_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/fp_password_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rect_text_edit"
        android:hint="@string/forget_password_hint"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:textSize="15sp" />
        
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/fp_username_field"
        android:layout_alignLeft="@id/fp_username_field"
        android:layout_marginBottom="5dp"
        android:paddingRight="80dp"
        android:text="@string/forget_password_username"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fp_notification"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fp_password_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/forget_password_notification"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:visibility="invisible" />

</RelativeLayout>