<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <!-- Space left for profile image -->

        <edu.cmu.cs.vlis.timetable.customView.RoundedImageView
            android:id="@+id/edit_profile_user_image"
            android:layout_width="112dp"
            android:layout_height="124dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contentDescription="@string/edit_profile_avartar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/edit_profile_first_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="45dp"
                android:text="@string/edit_profile_first_name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_profile_first_name_field"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/edit_profile_last_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="45dp"
                android:text="@string/edit_profile_last_name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_profile_last_name_field"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/edit_profile_univ_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/edit_profile_school"
                android:textSize="15sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/edit_profile_univ_field"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/edit_profile_old_pwd_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="22dp"
                android:text="@string/edit_profile_old_pwd"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_profile_old_pwd_field"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/edit_profile_optinal"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/edit_profile_new_pwd_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/edit_profile_new_pwd"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_profile_new_pwd_field"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/edit_profile_optinal"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>