<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/course_code_area"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/more_light_gray"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/course_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:gravity="left"
                android:text="@string/course_code"
                android:textSize="15sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/course_code_auto_complete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:background="@null"
                android:gravity="right"
                android:hint="@string/course_code_hint"
                android:singleLine="true"
                android:textAlignment="textEnd"
                android:textColor="@color/blue"
                android:textSize="15sp" />
        </LinearLayout>
            
        <ProgressBar
            android:id="@+id/progressIndicator"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress_spinner"
            android:visibility="gone" >
        </ProgressBar>
        
        <LinearLayout
            android:id="@+id/course_name_area"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/more_light_gray"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/course_name_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:gravity="left"
                android:text="@string/course_name_tag"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/course_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:gravity="right"
                android:textAlignment="textEnd"
                android:textColor="@color/blue"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/instructor_area"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/more_light_gray"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/instructor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:gravity="left"
                android:text="@string/instructor_name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instructor_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:gravity="right"
                android:textAlignment="textEnd"
                android:textColor="@color/blue"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/lectures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/lectures"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dark_green"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/lecture_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone" >
        </LinearLayout>

    </LinearLayout>

</ScrollView>